# Acuity

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PRD.md  README-NEMOCLAW.md  README.md  SUMMARY.md  TASKS.md  demo.sh  dev.sh  docker-compose.yml  package-lock.json  package.json  pyproject.toml  render.yaml
backend/: agent_tools.py  agents.py  db.py  fanout.py  graph.py  llm.py  main.py  memory.py  report.py  schemas.py  synthesis.py
backend/routers/: user.py
backend/sources/: arxiv_search.py  brave_search.py  decagon_db.py  openfda_faers.py  openfda_label.py  rxnorm.py  twosides.py
docs/: access-verification.md  data-sources.md  demo-cases.md  skills-test-plan.md
frontend/: .env.example  index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.jsx  main.jsx
policies/: policy-bootstrap.yaml  policy.yaml
policies/presets/: acuity-api.yaml
prompts/: synthesis.md
samples/: fixtures.json  fixtures_live.json  openfda_faers_warfarin_aspirin.json  openfda_label_warfarin.json  pubchem_warfarin_smiles.json  rxnorm_tylenol_brand.json  rxnorm_tylenol_to_ingredient.json  rxnorm_warfarin.json  rxnorm_warfarin_properties.json
scripts/: build_decagon.py  build_fixtures.py  build_twosides.py  iterate_synthesis.py  prestart.sh  run_in_sandbox.py
skills/analyze/: SKILL.md
skills/arxiv_search/: SKILL.md
skills/auth/: SKILL.md
skills/db/: SKILL.md
skills/deep_research/: SKILL.md
skills/make_report/: SKILL.md
skills/reminder/: SKILL.md
tests/: conftest.py  test_decagon.py  test_graph_intake.py  test_schemas.py
(+59 files in other folders)
